<resources>
    <string name="app_name">B2_ball</string>

    <!-- Scan -->
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <!-- Device -->
    <string name="device_search_msg">There are multiple devices.  Find your device.</string>

    <string name="nearby_devices">Nearby  devices</string>
    <string name="no_device_found">No device found</string>
    <string name="searching_for_new_device">Searching for new device</string>
    <string name="none">None</string>
    <string name="loading">loading</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="connecting">Connecting</string>
    <string name="ble_failed_connection">Failed to connect to the selected device</string>
    <string name="approve_your_device">Approve your device</string>
    <string name="unnamed">unnamed</string>
    <string name="ble_connected_to_device" formatted="false">Connected to %s.  Is your device rotating now?</string>
    <string name="yes_save_it">Yes, save it!</string>
    <string name="no_scan_again">No, scan again</string>
    <string name="rotate_again">Rotate again</string>
    <string name="try_to_connect">Reconnecting</string>
    <string name="sdk_try_again">Try again</string>

    <string name="lleft"><![CDATA[<<]]></string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="rright"><![CDATA[>>]]></string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="tracking_strategy_header">Tracking strategy</string>
    <string name="tiling_strategy_header">Tiling strategy</string>
    <string name="object_extractor_header">Object extractor</string>
    <string name="model_selector_header">Model selector</string>
    <string name="control_recording_state">Control recording state</string>
    <string name="scan_for_controllable_devices">Scan for controllable devices</string>
    <string name="open_settings">Open settings</string>
    <string name="settings_back_button_text">Back</string>
    <string-array name="available_object_detectors">
        <item>None</item>
        <item>ONNX YOLO default</item>
        <item>ONNX YOLO + Tracker + Quad tiling</item>
        <item>ONNX YOLO + Tracker + Quad tiling + fitting for rotating</item>
        <item>ONNX YOLO + Tracker + Single tiling</item>
    </string-array>

</resources>
